# quark

./: .clang-format  .gitignore  CMakeLists.txt  README.md  env.init.sh  esp32_env.cmake  test_demo.sh
app/location/: CMakeLists.txt  location.c  rc_location.h
demo/examples/: CMakeLists.txt  ip.me.c  mock.c  mock.h
demo/linux_test/: CMakeLists.txt  main.c
driver/ans/: CMakeLists.txt  default.c  parse.c  service.c  service.h
driver/ans/include/: ans.h  rc_ans.h
driver/bt/: rc_bt.h
driver/device/: SConscript  device.c  rc_device.h
driver/http/: CMakeLists.txt  SConscript  http_client.c  http_get.c  http_manager.c  http_post.c  http_request.c  rc_http_client.h  rc_http_manager.h  rc_http_request.h
driver/mqtt/: CMakeLists.txt  SConscript  esp32_mqtt_adaptor.c  esp32_mqtt_adaptor.h  message.c  message_recv.c  message_send.c  mqtt.c  mqtt.h  mqtt_adaptor.h  mqtt_client.c  mqtt_client.h  mqtt_defines.h  mqtt_pal.c  mqtt_pal.h  rc_mqtt.h  rt_thread_mqtt_adaptor.c  rt_thread_mqtt_adaptor.h
driver/network/: CMakeLists.txt  network.c  rc_network.h
driver/player/: CMakeLists.txt  esp32_speaker.c  rc_player.c  rc_player.h
driver/wifi/: CMakeLists.txt  esp32_wifi.c  linux_wifi.c  manager.h  wifi.c  wifi.h
framework/base64/: CMakeLists.txt  base64.c
framework/base64/include/: base64.h
framework/common/: CMakeLists.txt  SConscript  backoff.c  clist.c  net.c  rc_buf.c  rc_crypt.c  url.c
framework/common/include/: backoff.h  clist.h  rc_buf.h  rc_crypt.h  rc_error.h  rc_json.h  rc_url.h
framework/json/: CMakeLists.txt  SConscript  cJSON.c
framework/logs/: CMakeLists.txt  SConscript  logs.c
framework/logs/include/: logs.h
framework/md5/: CMakeLists.txt  SConscript  md5.c
framework/md5/include/: md5.h
framework/system/: CMakeLists.txt  SConscript  buf_queue.c  emqx_auth_http.conf  event.c  heap.c  heap.h  mutex.c  thread.c  timer.c
framework/system/include/: os_platform.h  rc_buf_queue.h  rc_event.h  rc_mutex.h  rc_rtos.h  rc_system.h  rc_thread.h  rc_timer.h
platform/ans/: CMakeLists.txt  SConscript  parse.c  service.c  service.h
platform/ans/include/: ans.h
platform/device/: CMakeLists.txt  device.c  rc_device.h
platform/http/: CMakeLists.txt  http_manager.c  http_request.c  rc_http_client.h  rc_http_manager.h
platform/mqtt/: CMakeLists.txt  mqtt_adaptor.h  rc_mqtt.h  rtos_mqtt_adaptor.c
sdk/: CMakeLists.txt  SConscript  device.c  download.c  env.c  env.h  http_api.c  kldispatch.c  location.c  location.h  property.c  property.h  sdk.c  sync_time.c  wifi.c
sdk/include/quark/: driver.h  quark.h  sdk.h  system.h
